Fix meal payment card stack + center issue on mobile screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1158,6 +1158,11 @@ hr.four {
   border: 1px solid rgb(68, 68, 68);
   border-radius: 0px;
 }
+/* .mealsCard {
+  max-width: 20rem;
+  border: 1px solid rgb(68, 68, 68);
+  border-radius: 0px;
+} */
 .background_black {
   background-color: #181818 !important;
   border-radius: 0 !important;
